MyCompiler_Tradution--MiniPascal-C--master/build/generated-sources/antlr4/basicintast/parser/PascalzinhoParser.java
// Generated from /home/andre/Área de Trabalho/TEU/InterpreTraduto/grammar/basicintast/parser/Pascalzinho.g4 by ANTLR 4.6

package basicintast.parser;
import basicintast.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PascalzinhoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, TO=7, IF=8, BEGIN=9, END=10, 
		ENDP=11, ELSE=12, THEN=13, WRITE=14, WRITELN=15, READLN=16, INT=17, FLOAT=18, 
		BOOLEAN=19, STRING=20, FOR=21, WHILE=22, ARRAY=23, VAR=24, PROCEDURE=25, 
		PROGRAM=26, TRUE=27, FALSE=28, OF=29, DO=30, GT=31, LT=32, EQ=33, GE=34, 
		LE=35, NE=36, PLUS=37, MINUS=38, MULT=39, DIV=40, OPEN=41, CLOSE=42, OPEN_BL=43, 
		CLOSE_BL=44, IS=45, EOL=46, NUM=47, VARNAME=48, STR=49, WS=50;
	public static final int
		RULE_program = 0, RULE_var = 1, RULE_var2 = 2, RULE_varn = 3, RULE_type = 4, 
		RULE_arraytype = 5, RULE_procedure = 6, RULE_start = 7, RULE_stmt = 8, 
		RULE_cond = 9, RULE_condExpr = 10, RULE_block = 11, RULE_write = 12, RULE_readln = 13, 
		RULE_attr = 14, RULE_truefalse = 15, RULE_expr = 16, RULE_expr1 = 17, 
		RULE_expr2 = 18;
	public static final String[] ruleNames = {
		"program", "var", "var2", "varn", "type", "arraytype", "procedure", "start", 
		"stmt", "cond", "condExpr", "block", "write", "readln", "attr", "truefalse", 
		"expr", "expr1", "expr2"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "':'", "','", "'['", "'..'", "']'", "':='", null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "'>'", "'<'", "'=='", 
		"'>='", "'<='", "'!='", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "'{'", 
		"'}'", "'='", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, "TO", "IF", "BEGIN", "END", 
		"ENDP", "ELSE", "THEN", "WRITE", "WRITELN", "READLN", "INT", "FLOAT", 
		"BOOLEAN", "STRING", "FOR", "WHILE", "ARRAY", "VAR", "PROCEDURE", "PROGRAM", 
		"TRUE", "FALSE", "OF", "DO", "GT", "LT", "EQ", "GE", "LE", "NE", "PLUS", 
		"MINUS", "MULT", "DIV", "OPEN", "CLOSE", "OPEN_BL", "CLOSE_BL", "IS", 
		"EOL", "NUM", "VARNAME", "STR", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pascalzinho.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	String tr ="";
	String aux="";
	char open=123;
	char close=125;     

	public PascalzinhoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public String nome;
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
			this.nome = ctx.nome;
		}
	}
	public static class ProgramStmtContext extends ProgramContext {
		public TerminalNode PROGRAM() { return getToken(PascalzinhoParser.PROGRAM, 0); }
		public TerminalNode STR() { return getToken(PascalzinhoParser.STR, 0); }
		public TerminalNode EOL() { return getToken(PascalzinhoParser.EOL, 0); }
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public ProgramStmtContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalzinhoVisitor ) return ((PascalzinhoVisitor<? extends T>)visitor).visitProgramStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ProgramStmtBeginContext extends ProgramContext {
		public Token p;
		public Token STR;
		public TerminalNode STR() { return getToken(PascalzinhoParser.STR, 0); }
		public TerminalNode EOL() { return getToken(PascalzinhoParser.EOL, 0); }
		public TerminalNode PROGRAM() { return getToken(PascalzinhoParser.PROGRAM, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public List<ProcedureContext> procedure() {
			return getRuleContexts(ProcedureContext.class);
		}
		public ProcedureContext procedure(int i) {
			return getRuleContext(ProcedureContext.class,i);
		}
		public ProgramStmtBeginContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalzinhoVisitor ) return ((PascalzinhoVisitor<? extends T>)visitor).visitProgramStmtBegin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new ProgramStmtBeginContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				((ProgramStmtBeginContext)_localctx).p = match(PROGRAM);
				tr+="#include<iostream>\n#include<string>\n\nusing namespace std; \n\n"; ((ProgramStmtBeginContext)_localctx).nome =  (((ProgramStmtBeginContext)_localctx).STR!=null?((ProgramStmtBeginContext)_localctx).STR.getText():null);
				setState(40);
				((ProgramStmtBeginContext)_localctx).STR = match(STR);
				setState(41);
				match(EOL);
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VAR) {
					{
					setState(42);
					var();
					}
				}

				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PROCEDURE) {
					{
					{
					setState(45);
					procedure();
					}
					}
					setState(50);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				_localctx = new ProgramStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				match(PROGRAM);
				setState(52);
				match(STR);
				setState(53);
				match(EOL);
				setState(54);
				start();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(PascalzinhoParser.VAR, 0); }
		public Var2Context var2() {
			return getRuleContext(Var2Context.class,0);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalzinhoVisitor ) return ((PascalzinhoVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(VAR);
			setState(58);
			var2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var2Context extends ParserRuleContext {
		public Var2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var2; }
	 
		public Var2Context() { }
		public void copyFrom(Var2Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StartLContext extends Var2Context {
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public StartLContext(Var2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalzinhoVisitor ) return ((PascalzinhoVisitor<? extends T>)visitor).visitStartL(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarNameFirstContext extends Var2Context {
		public Token VARNAME;
		public TerminalNode VARNAME() { return getToken(PascalzinhoParser.VARNAME, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode EOL() { return getToken(PascalzinhoParser.EOL, 0); }
		public Var2Context var2() {
			return getRuleContext(Var2Context.class,0);
		}
		public List<VarnContext> varn() {
			return getRuleContexts(VarnContext.class);
		}
		public VarnContext varn(int i) {
			return getRuleContext(VarnContext.class,i);
		}
		public VarNameFirstContext(Var2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalzinhoVisitor ) return ((PascalzinhoVisitor<? extends T>)visitor).visitVarNameFirst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var2Context var2() throws RecognitionException {
		Var2Context _localctx = new Var2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_var2);
		int _la;
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new VarNameFirstContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				((VarNameFirstContext)_localctx).VARNAME = match(VARNAME);
				aux+=(((VarNameFirstContext)_localctx).VARNAME!=null?((VarNameFirstContext)_localctx).VARNAME.getText():null);
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(62);
					varn();
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(68);
				match(T__0);
				setState(69);
				type();
				setState(70);
				match(EOL);
				setState(71);
				var2();
				}
				break;
			case 2:
				_localctx = new StartLContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				start();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarnContext extends ParserRuleContext {
		public VarnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varn; }
	 
		public VarnContext() { }
		public void copyFrom(VarnContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarNameContext extends VarnContext {
		public Token VARNAME;
		public TerminalNode VARNAME() { return getToken(PascalzinhoParser.VARNAME, 0); }
		public VarNameContext(VarnContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalzinhoVisitor ) return ((PascalzinhoVisitor<? extends T>)visitor).visitVarName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarnContext varn() throws RecognitionException {
		VarnContext _localctx = new VarnContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varn);
		try {
			_localctx = new VarNameContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__1);
			setState(77);
			((VarNameContext)_localctx).VARNAME = match(VARNAME);
			aux+=", "+(((VarNameContext)_localctx).VARNAME!=null?((VarNameContext)_localctx).VARNAME.getText():null);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public ArraytypeContext arraytype;
		public TerminalNode INT() { return getToken(PascalzinhoParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(PascalzinhoParser.FLOAT, 0); }
		public TerminalNode BOOLEAN() { return getToken(PascalzinhoParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(PascalzinhoParser.STRING, 0); }
		public ArraytypeContext arraytype() {
			return getRuleContext(ArraytypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalzinhoVisitor ) return ((PascalzinhoVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				match(INT);
				tr+="int "+aux+"; \n"; aux="";
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(FLOAT);
				tr+="float "+aux+"; \n";aux="";
				}
				break;
			case BOOLEAN:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				match(BOOLEAN);
				tr+="bool "+aux+"; \n";aux="";
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				match(STRING);
				tr+="string "+aux+"; \n";aux="";
				}
				break;
			case ARRAY:
				enterOuterAlt(_localctx, 5);
				{
				setState(88);
				((TypeContext)_localctx).arraytype = arraytype();
				tr+=((TypeContext)_localctx).arraytype.value+" "+aux+"["+((TypeContext)_localctx).arraytype.n+"];\n";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArraytypeContext extends ParserRuleContext {
		public String value;
		public String n;
		public Token n1;
		public Token n2;
		public Token t;
		public TerminalNode ARRAY() { return getToken(PascalzinhoParser.ARRAY, 0); }
		public TerminalNode OF() { return getToken(PascalzinhoParser.OF, 0); }
		public List<TerminalNode> NUM() { return getTokens(PascalzinhoParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(PascalzinhoParser.NUM, i);
		}
		public TerminalNode INT() { return getToken(PascalzinhoParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(PascalzinhoParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(PascalzinhoParser.STRING, 0); }
		public TerminalNode BOOLEAN() { return getToken(PascalzinhoParser.BOOLEAN, 0); }
		public ArraytypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arraytype; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalzinhoVisitor ) return ((PascalzinhoVisitor<? extends T>)visitor).visitArraytype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArraytypeContext arraytype() throws RecognitionException {
		ArraytypeContext _localctx = new ArraytypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arraytype);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(ARRAY);
				setState(94);
				match(T__2);
				setState(95);
				((ArraytypeContext)_localctx).n1 = match(NUM);
				setState(96);
				match(T__3);
				setState(97);
				((ArraytypeContext)_localctx).n2 = match(NUM);
				setState(98);
				match(T__4);
				setState(99);
				match(OF);
				setState(100);
				((ArraytypeContext)_localctx).t = match(INT);
				((ArraytypeContext)_localctx).value =  "int "; ((ArraytypeContext)_localctx).n =  (((ArraytypeContext)_localctx).n2!=null?((ArraytypeContext)_localctx).n2.getText():null)+"-"+(((ArraytypeContext)_localctx).n1!=null?((ArraytypeContext)_localctx).n1.getText():null);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				match(ARRAY);
				setState(103);
				match(T__2);
				setState(104);
				((ArraytypeContext)_localctx).n1 = match(NUM);
				setState(105);
				match(T__3);
				setState(106);
				((ArraytypeContext)_localctx).n2 = match(NUM);
				setState(107);
				match(T__4);
				setState(108);
				match(OF);
				setState(109);
				((ArraytypeContext)_localctx).t = match(FLOAT);
				((ArraytypeContext)_localctx).value =  "float "; ((ArraytypeContext)_localctx).n =  (((ArraytypeContext)_localctx).n2!=null?((ArraytypeContext)_localctx).n2.getText():null)+"-"+(((ArraytypeContext)_localctx).n1!=null?((ArraytypeContext)_localctx).n1.getText():null);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				match(ARRAY);
				setState(112);
				match(T__2);
				setState(113);
				((ArraytypeContext)_localctx).n1 = match(NUM);
				setState(114);
				match(T__3);
				setState(115);
				((ArraytypeContext)_localctx).n2 = match(NUM);
				setState(116);
				match(T__4);
				setState(117);
				match(OF);
				setState(118);
				((ArraytypeContext)_localctx).t = match(STRING);
				((ArraytypeContext)_localctx).value =  "string "; ((ArraytypeContext)_localctx).n =  (((ArraytypeContext)_localctx).n2!=null?((ArraytypeContext)_localctx).n2.getText():null)+"-"+(((ArraytypeContext)_localctx).n1!=null?((ArraytypeContext)_localctx).n1.getText():null);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				match(ARRAY);
				setState(121);
				match(T__2);
				setState(122);
				((ArraytypeContext)_localctx).n1 = match(NUM);
				setState(123);
				match(T__3);
				setState(124);
				((ArraytypeContext)_localctx).n2 = match(NUM);
				setState(125);
				match(T__4);
				setState(126);
				match(OF);
				setState(127);
				((ArraytypeContext)_localctx).t = match(BOOLEAN);
				((ArraytypeContext)_localctx).value =  "bool "; ((ArraytypeContext)_localctx).n =  (((ArraytypeContext)_localctx).n2!=null?((ArraytypeContext)_localctx).n2.getText():null)+"-"+(((ArraytypeContext)_localctx).n1!=null?((ArraytypeContext)_localctx).n1.getText():null);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureContext extends ParserRuleContext {
		public TerminalNode PROCEDURE() { return getToken(PascalzinhoParser.PROCEDURE, 0); }
		public TerminalNode VARNAME() { return getToken(PascalzinhoParser.VARNAME, 0); }
		public TerminalNode EOL() { return getToken(PascalzinhoParser.EOL, 0); }
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public TerminalNode END() { return getToken(PascalzinhoParser.END, 0); }
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalzinhoVisitor ) return ((PascalzinhoVisitor<? extends T>)visitor).visitProcedure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureContext procedure() throws RecognitionException {
		ProcedureContext _localctx = new ProcedureContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_procedure);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(PROCEDURE);
			setState(132);
			match(VARNAME);
			setState(133);
			match(OPEN);
			setState(134);
			match(CLOSE);
			setState(135);
			match(EOL);
			setState(136);
			start();
			setState(137);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(PascalzinhoParser.BEGIN, 0); }
		public TerminalNode ENDP() { return getToken(PascalzinhoParser.ENDP, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalzinhoVisitor ) return ((PascalzinhoVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_start);
		int _la;
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BEGIN:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(BEGIN);
				tr+="\nint main()"+open+"\n";
				setState(142); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(141);
					stmt();
					}
					}
					setState(144); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WRITE) | (1L << WRITELN) | (1L << READLN) | (1L << FOR) | (1L << WHILE) | (1L << OPEN) | (1L << NUM) | (1L << VARNAME))) != 0) );
				setState(146);
				match(ENDP);
				tr+="return 0;\n"+close;
				Escrever.get(tr);
				}
				break;
			case IF:
			case WRITE:
			case WRITELN:
			case READLN:
			case FOR:
			case WHILE:
			case OPEN:
			case NUM:
			case VARNAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(151); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(150);
					stmt();
					}
					}
					setState(153); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WRITE) | (1L << WRITELN) | (1L << READLN) | (1L << FOR) | (1L << WHILE) | (1L << OPEN) | (1L << NUM) | (1L << VARNAME))) != 0) );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
